2008-10-06  Richard Hult  <richard@imendio.com>

	* src/dh-keyword-model.c: (dh_keyword_model_set_words): A bit
	bigger commit than I wanted... Split out the actual searching to
	make the code a little clearer. Remove the last remains of the old
	book/page searching, and move out allocating/freeing the search
	terms from the inner search loop. Only check for one exact hit..

2008-10-06  Richard Hult  <richard@imendio.com>

	* src/dh-keyword-model.c: Whitespace and comment fixes.

2008-10-06  Richard Hult  <richard@imendio.com>

	* src/dh-keyword-model.c: (keyword_model_get_iter),
	(keyword_model_iter_n_children), (dh_keyword_model_filter): No
	need to go through the hit list constantly in the tree model
	implementation, just keep the result that we already have after
	updating the list.

2008-10-06  Richard Hult  <richard@imendio.com>

	* src/Makefile.am: The assistant is now used by DhBase so move it
	to the library.

2008-10-06  Richard Hult  <richard@imendio.com>

	* src/dh-keyword-model.c: Use G_DEFINE_TYPE_WITH_CODE instead of
	doing by hand.

2008-10-06  Richard Hult  <richard@imendio.com>

	* src/dh-keyword-model.h: Whitespace cleanup.

2008-10-06  Richard Hult  <richard@imendio.com>

	* src/dh-search.c: (search_cell_data_func): Use the link instead
	of getting the name directly from the model, saves a copy/free and
	is more consistent with the other properties that we get.

2008-10-06  Richard Hult  <richard@imendio.com>

	* src/dh-preferences.c: (dh_preferences_show_dialog):
	* src/dh-util.[ch]: Rename dh_glade_* to dh_util_glade for
	consistency.

2008-10-06  Richard Hult  <richard@imendio.com>

	* src/dh-parser.c: (parser_start_node_keyword): Strip out "()" in
	addition to the previous " ()". Try to be smart for devhelp 1
	files by assuming it's a macro (might need to revert that part
	after testing more devhelp books).

2008-10-06  Richard Hult  <richard@imendio.com>

	* src/dh-parser.c: (parser_start_node_keyword): Fix regression