@@ -1,3 +1,8 @@
+2008-10-08  Richard Hult  <richard@imendio.com>
+
+	* src/dh-parser.c: (dh_parser_read_file): Remove unnecessary
+	checks.
+
 2008-10-06  Richard Hult  <richard@imendio.com>
 
 	* src/dh-keyword-model.c: (dh_keyword_model_set_words): A bit
